# sqlx-stream-toy

./: .env  Cargo.toml  README.md
src/: async_query.rs  generate.rs  main.rs
src/metric/: mod.rs
src/stream/: mod.rs  transaction.rs
src/transaction/: mod.rs
